--- a/WebContent/css/header.css
+++ b/WebContent/css/header.css
@@ -4,9 +4,12 @@
 	padding: 1em;
 }
 
-.demobox-sitename {
+.demobox-site-name {
+	position: absolute;
+	top: 7px;
 	font-weight: 700;
-	font-size: 18px;
+    font-size: 30px;
+    padding: 15px;
 }
 /* 全体調整CSS */
 .hamburger-demo-menubox * {
